# calimerge

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
caliscope/caliscope/: __main__.py
caliscope/caliscope/gui/: charuco_widget.py
caliscope/caliscope/trackers/: charuco_tracker.py
multiwebcam/: test_osx.py  testreq.yml
multiwebcam/multiwebcam/cameras/: live_stream.py
posetrack/: environment.yaml  quick_speed.py  quick_speed_2.py
posetrack/src/posetrack/: __init__.py  compare_posetrack.py  cs_parse.py  example_batch.py  example_detect_persons.py  example_testing_multiparams.py  libwalk.py  per_session_tracking.py  pose_detector.py  process_image_batches.py  process_synced_poses.py  processed_visualizations.py
posetrack/tests/: test_estimate_poses.py  test_process_synced_mwc_frames.py
src/calimerge/: __init__.py  camera_binding.py  cli.py  clock_widget.py  config.py  recorder_gui.py  sync_capture_images.py  test_binding.py  triangulation.py  types.py  video_recorder.py
src/calimerge/calibration/: __init__.py  charuco.py  extrinsic.py  intrinsic.py
src/calimerge/gui/: __init__.py  frame_utils.py  main.py  state.py  workers.py
src/native/: build_macos.sh  build_win32.bat  calimerge_macos.mm  calimerge_platform.h  calimerge_win32.cpp  libcalimerge.dylib  sync_timestamps.csv  test_capture  test_capture.c  test_enumerate  test_enumerate.c  test_multi  test_multi.c  test_sync_log  test_sync_log.c
tests/: conftest.py  test_charuco.py  test_config.py  test_intrinsic.py  test_state.py  test_triangulation.py  test_types.py
(+14 files in other folders)
