[project]
name = "calimerge"
version = "0.1.0"
description = "Unified multi-camera motion capture with synchronized recording"
license = "BSD-2-Clause"
authors = [
    { name = "Mac Prible", email = "prible@gmail.com" }
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy>=1.24.0",
    "opencv-contrib-python>=4.8.0",
    "PySide6>=6.6.0",
    "numba>=0.59.0",
    "scipy>=1.11.0",
    "rtoml>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-qt>=4.2.0",
    "ruff>=0.1.0",
]

[project.scripts]
calimerge = "calimerge.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/calimerge"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
